# $Id$

2007-11-03	Konstantin V. Arkhipov

	* meta/, core/DB/, core/Form/: support for binary data type
	implemented.

	* core/OSQL/DataType.class.php: typeToString moved to Dialect.

2007-11-02	Vladimir A. Altuchov

	* main/Utils/IO/FileReader.class.php: new reader added. 

2007-11-01	Vladimir A. Altuchov

	* main/Markup/Feed/AtomItemWorker.class.php,
	main/Markup/Feed/RssItemWorker.class.php,
	main/Markup/Feed/FeedItem.class.php: id field added.

2007-10-31	Dmitry E. Pismenny

	* core/Form/Primitives/PrimitiveDate.class.php: PrimitiveDate::checkRanges()
	fixed.

2007-10-31	Dmitry A. Lomash

	* main/Net/IpRange.class.php: added setters, dropped final declaration.

2007-10-30	Ivan Y. Khvostishkov

	* core/Form/Primitives/PrimitiveAnyType.class.php: anyType() -
	universal primitive ;)

2007-10-27	Ivan Y. Khvostishkov

	* core/Form/Primitives/PrimitiveHttpUrl.class.php:
	Primitive::httpUrl().

2007-10-26	Vladimir A. Altuchov

	* core/Cache/WatermarkedPeer.class.php: + setter for watermark label.

2007-10-25	Denis M. Gabaidulin

	* main/Flow/RedirectToView.class.php: constructor fixed.

2007-10-24	Konstantin V. Arkhipov

	* core/Form/Form.class.php: markGood() and markWrong() now supports
	rules marking.

	* main/Criteria/Criteria.class.php: field duplication eliminated for
	enumeration's childs.

2007-10-17	Ivan Y. Khvostishkov

	* main/Base/DTOProto.class.php, core/Form/Form.class.php: forms now
	possess prototype and can be abstract.

	* core/Form/Primitives/PrimitiveEnumerationList.class.php: implemented.

2007-10-16	Konstantin V. Arkhipov

	* main/DAOs/Handlers/FileSystemSegmentHandler.class.php: drop() now
	uses FileUtils' removeDirectory.

	* main/DAOs/Workers/TransparentDaoWorker.class.php,
	main/DAOs/Handlers/: no more hardcoded precision, platform-dependent
	computation implemented.

2007-10-16	Dmitry E. Pismenny

	* incubator/classes/main/Application/ApplicationUrl.class.php: renamed
	into AppUrl.class.php.

2007-10-11	Ivan Y. Khvostishkov
